--- a/css/lodge-leadership.scss
+++ b/css/lodge-leadership.scss
@@ -1,3 +1,24 @@
+@mixin min($pixels) {
+    @media screen and (min-width: $pixels) { @content; }
+}
+
+@mixin max($pixels) {
+    @media screen and (max-width: $pixels) { @content; }
+}
+@mixin minmax($min, $max) {
+    @media screen and (min-width: $min) and (max-width: $max) { @content; }
+}
+
+
+@mixin mobile {
+    @media screen and (max-width: 768px) { @content; }
+}
+
+@mixin tablet {
+    @media screen and (min-width: 768px) and (max-width: 981px) { @content; }
+}
+
+
 .oaldr-filter-buttons {
     display:inline-block;
     padding: 5px 30px;
@@ -7,17 +28,33 @@
     width:100%;
     box-sizing: border-box;
 
+    @include max(981px) {
+        text-align: left;
+    }
+
     label {
-        margin: 0 5px 0 15px;
+        margin: 0 15px;
         display: inline-block;
         vertical-align: middle;
         text-transform: uppercase;
         font-size: 12px;
         font-weight: bold;
+        min-width: 45px;
+        text-align: center;
+
+        @include max(981px) {
+            display: block;
+            margin: 0 auto;
+        }
     }
 
     .group {
         display:inline-block;
+
+        @include max(981px) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     .filter, .sort {
@@ -56,12 +93,13 @@
 .oaldr-positions {
     margin-bottom: -20px;
     text-align: left;
-    display:inline-block;
+    display:block;
     max-width: 1080px;
     width:100%;
     vertical-align: top;
     min-height: 500px;
     font-size: 0;
+    margin: 0 auto;
 
     .button_shortcode {
         font-size: 16px;
@@ -87,11 +125,18 @@
     display:none;  
     text-align: left;
     vertical-align: top;
-    max-width: 50%;
+    width: 50%;
     
     &:only-of-type {
         width: 100%;
         margin-top: 20px;
+    }
+
+    @include mobile() {
+        width: auto;
+        min-width: 51%;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
 
@@ -100,51 +145,64 @@
 .oaldr-position-header {
     position: absolute;
     top: 0;
-    left:10px;
+    left: 0;
+    height: 100px;
+    width: 100px;
+
+    @include mobile() {
+        width: 80px;
+    }
 
     img {
         float: left;
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        height: auto;
+    }
+
+    .oaldr-edit-overlay {
+        width: 100%;
+        height: 100%;
+        background: rgba(#ccc, 0.6);
+        z-index: 20;
+        position: absolute;
+    }
+
+    .dashicons {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .edit-person {
+        top: 25px;
     }
 }
 
 .oaldr-position-content {
     font-size: 14px;
-    padding: 20px 20px 0 0;
+    padding: 10px 0 0;
     line-height: 1.4em;
     margin: 0 0 0 125px;
+
+    @include mobile() {
+        margin: 0 0 0 100px;
+    }
 
     h3 {
         margin: 0;
         font-size: 16px;
-        padding-bottom: 6px;
+        padding-bottom: 5px;
     }
 
     .oaldr-position-title {
         font-size: 16px;
         line-height: 100%;
         font-style: normal;
-        margin: 3px 0 25px;
+        margin: 3px 0 5px;
         padding: 0;
         text-transform: uppercase;
         font-weight: bold;
         color: #B7B7B7;
-    }
-
-    .levelandgroup {
-        margin: 0 0 10px;
-        padding: 0;
-        line-height: 14px;
-    }
-
-    .teamlink {
-        font-size: 16px;
-        line-height: 100%;
-        font-style: italic;
-        margin: 3px 0 20px;
-        padding: 0;
-        display: none;
     }
 
     .edit-icon {
@@ -155,15 +213,35 @@
         a {
           color: #C81F21 !important;
       }
-  }
-
-  .phonenumber {
-    padding: 0;
-    line-height: 14px;
     }
-    .icon_phone:before {
-        margin-right: 3px;
-        color: #C81F21 !important;
+
+    .oaldr-level-and-group {
+        padding: 0;
+        margin-bottom: 5px;
+    }
+
+    .oaldr-phone {
+        font-size: 12px;
+        line-height: 14px;
+        text-decoration: none;
+        padding: 0;
+        margin-bottom: 5px;
+
+        span {
+            font-size: 14px;
+        }
+    }
+
+    .oaldr-email {
+        font-size: 12px;
+        line-height: 14px;
+        text-decoration: none;
+        padding: 0;
+        margin-bottom: 5px;
+
+        span {
+            font-size: 14px;
+        }
     }
 }
 
